# doubao-image-studio

./: README.md  data.txt  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: build-macos-intel.yml  release.yml  test.yml
DoubaoShadowNode-local/: background.js  content.js  hook.js  manifest.json
doubao-extension/: index.html  manifest.json  package-lock.json  package.json  vite.config.ts
doubao-extension/src/: hook.ts
doubao-extension/src/background/: background.ts  index.ts
doubao-extension/src/content/: index.ts
server/: README.md  package.json
server/data/: metadata.db
server/src/: app.js
server/src/controllers/: chat.controller.js
server/src/routes/: chat.routes.js
server/src/services/: ai.service.js  websocket.service.js
src/: index.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/server/: db.rs  mod.rs  routes.rs  websocket.rs
src/components/canvas/: CanvasArea.tsx  EmptyState.tsx  ImageBatch.tsx  ImageCard.tsx  ImageLightbox.tsx
src/components/chat/: ChatView.tsx
src/components/common/: Button.tsx  Modal.tsx  Toast.tsx
src/components/gallery/: GalleryItem.tsx  GalleryPanel.tsx
src/components/layout/: AppShell.tsx  (+1 more)
src/hooks/: useGallery.ts  useImageGeneration.ts  useWebSocket.ts
src/services/: chromeWorker.ts  doubaoApi.ts  imageStorage.ts
src/store/: imageStore.ts  navStore.ts  notificationStore.ts  settingsStore.ts
src/types/: index.ts
src/utils/: imageUtils.ts
(+7 files in other folders)
