[package]
name = "doubao-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "doubao_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# CRITICAL: "protocol-asset" is REQUIRED to show local images via convertFileSrc.
# "image-png" is needed for PNG support.
tauri = { version = "2", features = [ "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Server dependencies
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
http = "1"
http-body-util = "0.1"
tokio-tungstenite = { version = "0.26", features = ["stream"] }
futures-util = "0.3"
rusqlite = { version = "0.33", features = ["bundled"] }
image = "0.25"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

